--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,6 +12,7 @@
         "fruitcake/laravel-cors": "dev-develop",
         "guzzlehttp/guzzle": "^7.7",
         "laravel/framework": "^10.13",
+        "laravel/passport": "^11.10",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "nwidart/laravel-modules": "^10.0",
