--- a/portfolio1/package.json
+++ b/portfolio1/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@remix-run/react": "^2.5.1",
+    "animate.css": "^4.1.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "remix": "^2.5.1"
   },
   "devDependencies": {
