--- a/next/package.json
+++ b/next/package.json
@@ -12,9 +12,11 @@
     "@remix-run/react": "^2.5.1",
     "animate.css": "^4.1.1",
     "next": "14.1.0",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-uuid": "^2.0.0",
     "remix": "^2.5.1"
   },
   "devDependencies": {
